# temporary_hack_rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE
.github/: dependabot.yaml
assets/: resume.json
backend/: Cargo.toml
backend/assets/: resume.json
backend/src/: github.rs  greetings.rs  main.rs
common/src/model/: repo.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml
frontend/src/: api.rs  controllers.rs  main.rs  models.rs  state.rs  temporary_hack_api.rs
frontend/src/components/: mod.rs  repo_item.rs  repo_list.rs
src/: github.rs  main.rs  tests.rs
temporary_hack/: Cargo.toml
temporary_hack/src/: greetings.rs  main.rs
temporary_hack_web/: Cargo.toml  Trunk.toml
temporary_hack_web/src/: main.rs
tui/: Cargo.toml
tui/src/: main.rs
