[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
rocket = { version = "0.5.0", features = ["json"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
cached = { version = "0.49", features = ["async"]}
