[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace", "cors", "fs"]}
tracing = "0.1"
tracing-subscriber = {version ="0.3", features = ["env-filter"]}
