[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
wasm-bindgen-futures = "0.4"
yew = { version = "0.21", features =  ["csr"] }
reqwasm = "0.5"
